--- a/templates/index.html
+++ b/templates/index.html
@@ -191,24 +191,9 @@
         </div>
     </div>
     <footer>
-        Автор: <a href="https://t.me/Vladimir_Chamin" target="_blank">Владимир Чамин</a>
-        - <a href="#" data-toggle="modal" data-target="#courseModal">Курс</a> - <a
+        Автор: <a href="https://t.me/Vladimir_Chamin" target="_blank">Владимир Чамин</a> - <a
             href="https://t.me/tribute/app?startapp=dmj8" target="_blank">Отблагодарить</a>
     </footer>
-    <!-- Модальное окно -->
-    <div class="modal fade" id="courseModal" tabindex="-1" role="dialog" aria-labelledby="courseModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-body text-center">
-                    <video controls width="100%">
-                        <source src="static/data/video.mp4" type="video/mp4">
-                        Ваш браузер не поддерживает видео.
-                    </video>
-                </div>
-            </div>
-        </div>
-    </div>
     <!-- Подключение Bootstrap JS и зависимостей -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
